<resources>
    <string name="app_name">CellReader</string>
    <string name="running_notification_title">Running</string>
    <string name="running_notification_desc">Long-press to hide this notification.</string>
    <string name="send_data_to_wear">Send Data to Wear</string>
    <string name="reorder">Reorder</string>
    <string name="cdma_signal_strength">CDMA Signal Strength</string>
    <string name="cdma_info">CDMA Info</string>
    <string name="gsm_signal_strength">GSM Signal Strength</string>
    <string name="gsm_info">GSM Info</string>
    <string name="lte_signal_strength">LTE Signal Strength</string>
    <string name="lte_info">LTE Info</string>
    <string name="nr_signal_strength">NR Signal Strength</string>
    <string name="nr_info">NR Info</string>
    <string name="tdscdma_signal_strength">TDSCDMA Signal Strength</string>
    <string name="tdscdma_info">TDSCDMA Info</string>
    <string name="wcdma_signal_strength">WCDMA Signal Strength</string>
    <string name="wcdma_info">WCDMA Info</string>
    <string name="info">Info</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="service_state">Service State</string>
    <string name="network_registrations">Network Registrations</string>
    <string name="subscription_info">Subscription Info</string>
    <string name="access_rules">Access Rules</string>
    <string name="display_info">Display Info</string>
    <string name="gsm">GSM</string>
    <string name="cdma">CDMA</string>
    <string name="wcdma">WCDMA</string>
    <string name="tdscdma">TDSCDMA</string>
    <string name="evdo">EvDO</string>
    <string name="lte">LTE</string>
    <string name="nr">NR</string>
    <string name="nr_nsa">NR NSA</string>
    <string name="unknown">Unknown</string>
    <string name="exit">Exit</string>
    <string name="supporters">Supporters</string>
    <string name="patreon">Patreon</string>
    <string name="github">GitHub</string>
    <string name="website">Website</string>
    <string name="about">About</string>
    <string name="open_app">Open App</string>
    <string name="signal_graph">Signal Graph</string>
    <string name="maintain_scroll">Maintain Scroll</string>
    <string name="twitter">Twitter</string>
    <string name="nr_nsa_mmwave">NR NSA mmW</string>
    <string name="skip">Skip</string>
    <string name="level_format">Level</string>
    <string name="timestamp_format">Timestamp</string>
    <string name="operator_format">Carrier</string>
    <string name="roaming_format">Roaming</string>
    <string name="roaming_type_format">Roaming Type</string>
    <string name="data_roaming_from_reg_format">Data Roaming from Reg</string>
    <string name="state_format">State</string>
    <string name="emergency_only_format">Emergency Only</string>
    <string name="network_type_format">Type</string>
    <string name="override_type_format">Override Type</string>
    <string name="bandwidths_format">Bandwidths</string>
    <string name="duplex_format">Duplex</string>
    <string name="channel_format">Channel</string>
    <string name="searching_format">Searching</string>
    <string name="manual_format">Manual</string>
    <string name="iwlan_preferred_format">IWLAN Preferred</string>
    <string name="cssi_format">CSSI</string>
    <string name="cdma_system_id_format">CDMA Sys ID</string>
    <string name="cdma_network_id_format">CDMA Net ID</string>
    <string name="cdma_roaming_indicator_format">CDMA Roaming Indicator</string>
    <string name="cdma_eri_icon_format">CDMA ERI Icon</string>
    <string name="arfcn_rsrp_boost_format">ARFCN RSRP Boost</string>
    <string name="endc_available_format">ENDC</string>
    <string name="nr_available_format">NR Available</string>
    <string name="dcnr_restricted_format">DCNR Restricted</string>
    <string name="vops_supported_format">VoPS</string>
    <string name="vops_emergency_service_supported_format">VoPS Emergency</string>
    <string name="vops_emergency_service_fallback_supported_format">VoPS Fallback</string>
    <string name="prl_format">PRL</string>
    <string name="roaming_indicator_format">Roaming Indicator</string>
    <string name="css_format">CSS</string>
    <string name="transport_format">Transport</string>
    <string name="access_format">Access</string>
    <string name="registered_format">Registered</string>
    <string name="in_service_format">In Service</string>
    <string name="emergency_enabled_format">Emergency Enabled</string>
    <string name="registration_state_format">Registration State</string>
    <string name="reject_cause_format">Reject Cause</string>
    <string name="rplmn_format">R-PLMN</string>
    <string name="services_format">Services</string>
    <string name="domain_format">Domain</string>
    <string name="carrier_aggregation_format">CA</string>
    <string name="nr_state_format">ENDC</string>
    <string name="cgi_format">CGI</string>
    <string name="plmn_format">PLMN</string>
    <string name="type_format">Type</string>
    <string name="lac_format">LAC</string>
    <string name="cid_format">CID</string>
    <string name="bsic_format">BSIC</string>
    <string name="arfcn_format">ARFCN</string>
    <string name="additional_plmns_format">Additional PLMNs</string>
    <string name="lat_lon_format">Lat/Lon</string>
    <string name="basestation_id_format">Basestation ID</string>
    <string name="uarfcn_format">UARFCN</string>
    <string name="csg_id_format">CSG ID</string>
    <string name="csg_indicator_format">CSG Indicator</string>
    <string name="home_node_b_name_format">Home Node-B Name</string>
    <string name="cpid_format">CPID</string>
    <string name="tac_format">TAC</string>
    <string name="ci_format">CI</string>
    <string name="earfcn_format">EARFCN</string>
    <string name="bandwidth_format">Bandwidth</string>
    <string name="bands_format">Bands</string>
    <string name="nci_format">NCI</string>
    <string name="pci_format">PCI</string>
    <string name="nrarfcn_format">NRARFCN</string>
    <string name="timing_advance_format">Timing Advance</string>
    <string name="bit_error_rate_format">Bit Error Rate</string>
    <string name="snr_format">SnR</string>
    <string name="evdo_asu_format">EvDO ASU</string>
    <string name="rscp_format">RSCP</string>
    <string name="ecno_format">EcNo</string>
    <string name="rsrq_format">RSRQ</string>
    <string name="rssi_format">RSSI</string>
    <string name="rssnr_format">RSSnR</string>
    <string name="cqi_format">CQI</string>
    <string name="cqi_table_index_format">CQI Index</string>
    <string name="ss_rsrq_format">SS RSRQ</string>
    <string name="csi_rsrq_format">CSI RSRQ</string>
    <string name="ss_sinr_format">SS SinR</string>
    <string name="csi_cqi_report_format">CSI CQI Report</string>
    <string name="csi_cqi_table_index_format">CSI CQI Index</string>
    <string name="valid_format">Valid</string>
    <string name="asu_format">ASU</string>
    <string name="cdma_dbm_format">CDMA dBm</string>
    <string name="evdo_dbm_format">EvDO dBm</string>
    <string name="cdma_ecio_format">CDMA Ec/Io</string>
    <string name="evdo_ecio_format">EvDo Ec/Io</string>
    <string name="sim_slot_format">SIM Slot</string>
    <string name="number_format">Number</string>
    <string name="display_name_format">Display Name</string>
    <string name="carrier_name_format">Carrier Name</string>
    <string name="carrier_id_format">Carrier ID</string>
    <string name="subscription_type_format">Sub Type</string>
    <string name="subscription_id_format">Sub ID</string>
    <string name="profile_class_format">Profile Class</string>
    <string name="name_source_format">Name Source</string>
    <string name="opportunistic_format">Opportunistic</string>
    <string name="embedded_format">Embedded</string>
    <string name="icc_id_format">ICC ID</string>
    <string name="hplmns_format">HPLMNs</string>
    <string name="ehplmns_format">EHPLMNs</string>
    <string name="group_disabled_format">Group Disabled</string>
    <string name="group_uuid_format">Group UUID</string>
    <string name="group_owner_format">Group Owner</string>
    <string name="country_iso_format">Country ISO</string>
    <string name="card_string_format">Card String</string>
    <string name="card_id_format">Card ID</string>
    <string name="uicc_apps_format">UICC Apps</string>
    <string name="data_roaming_format">Data Roaming</string>
    <string name="cell_connection_status_format">Status</string>
    <string name="certificate_format">Certificate</string>
    <string name="access_type_format">Access Type</string>
    <string name="package_name_format">Package</string>
    <string name="dl_freqs_format">DL Freqs</string>
    <string name="ul_freqs_format">UL Freqs</string>
    <string name="freqs_format">Freqs</string>
    <string name="transfer_status">Transfer Status</string>
    <string name="is_non_terrestrial_network">Satellite</string>
    <string name="data_specific_info">Data Specific Info</string>
    <string name="voice_specific_info">Voice Specific Info</string>
    <string name="transfer_status_none">None</string>
    <string name="transfer_status_transferred_out">Transferred Out</string>
    <string name="transfer_status_converted">Converted</string>
    <string name="legend_rsrp">%1$d: %2$s RSRP</string>
    <string name="legend_rssi">%1$d: %2$s RSSI</string>
    <string name="legend_rsrq">%1$d: %2$s RSRQ</string>
    <string name="legend_rssnr">%1$d: %2$s RSSnR</string>
    <string name="legend_ss_rsrp">%1$d: %2$s RS RSRP</string>
    <string name="legend_csi_rsrp">%1$d: %2$s CSI RSRP</string>
    <string name="legend_ss_rsrq">%1$d: %2$s SS RSRQ</string>
    <string name="legend_csi_rsrq">%1$d: %2$s CSI RSRQ</string>
    <string name="legend_ss_sinr">%1$d: %2$s SS SinR</string>
    <string name="legend_csi_sinr">%1$d: %2$s CSI SinR</string>
    <string name="legend_ecio">%1$d: %2$s Ec/Io</string>
    <string name="legend_dbm">%1$d: %2$s dBm</string>
    <string name="legend_evdo_snr">%1$d: EvDO SnR</string>
    <string name="legend_ecno">%1$d: %2$s EcNo</string>
    <string name="legend_rscp">%1$d: %2$s RSCP</string>
    <string name="chart_sim_format">SIM %d</string>
    <string name="none">None</string>
    <string name="secondary_serving">Secondary Serving</string>
    <string name="primary_serving">Primary Serving</string>
    <string name="restricted">Restricted</string>
    <string name="not_restricted">Not Restricted</string>
    <string name="connected">Connected</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="mmwave">mmWave</string>
    <string name="fdd">FDD</string>
    <string name="tdd">TDD</string>
    <string name="cs">CS</string>
    <string name="ps">PS</string>
    <string name="cs_ps">CS + PS</string>
    <string name="local_sim">Local SIM</string>
    <string name="remote_sim">Remote SIM</string>
    <string name="operational">Operational</string>
    <string name="provisioning">Provisioning</string>
    <string name="testing">Testing</string>
    <string name="unset">Unset</string>
    <string name="carrier">Carrier</string>
    <string name="required_permissions">Required Permissions</string>
    <string name="required_permissions_desc">CellReader requires the following permissions to function. No data is collected using these permissions, they are used only to display information about your cellular connection to you.</string>
    <string name="required_permission_fine_location">Precise Location is used for certain modem APIs.</string>
    <string name="required_permission_phone_state">Phone State is used for certain modem APIs.</string>
    <string name="required_permission_phone_numbers">Phone Number is granted when Phone State is granted and allows displaying the phone number associated with each SIM.</string>
    <string name="grant">Grant</string>
    <string name="close_app">Close App</string>
</resources>